--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "concat-stream": "^2.0.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.15.1",
