--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cli_battleship_game",
   "version": "1.0.0",
-  "description": "",
+  "description": "CLI Battleship Game, built with JavaScript",
   "main": "index.js",
   "directories": {
     "test": "test"
